# primes

./: .flake8  .gitignore  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  LICENSE.md  README.rst  pyproject.toml
src/tigerarcades/primes/: lib.py
src/tigerarcades/primes/tests/: test_lib.py
