[tool.poetry]
name = "primes"
version = "1.0.0"
description = "An example project illustrating a standard Python project layout."
authors = ["Florian Salihovic <tigerarcades@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
